--- a/Payment.html
+++ b/Payment.html
@@ -10,7 +10,7 @@
         body {
             height: 100%;
             width: 100%;
-            margin: 0;
+            margin: 0px;
             padding: 0;
             font-family: Century Gothic, CenturyGothic, AppleGothic, sans-serif;
         }
